--- a/src/views/bms/Layout/style.less
+++ b/src/views/bms/Layout/style.less
@@ -8,13 +8,13 @@
   flex-direction: row;
   justify-content:space-between;
   align-items: center;
-  flex-basis: 5%;
+  flex-basis: 4%;
   background-color: #438EB9;
 }
 .body{
   display:flex;
   flex-direction: row;
-  flex-basis: 95%;
+  flex-basis: 96%;
 }
 .sidebar
 {
@@ -33,6 +33,7 @@
   flex:0 0 85%;
 }
 .top{
+  display: flex;
   align-items: center;
   flex-basis:5%;
   border-bottom: 1px solid #DCDFE6;
