--- a/src/assets/css/formMaking/index.scss
+++ b/src/assets/css/formMaking/index.scss
@@ -223,6 +223,16 @@ $primary-background-color: #ecf5ff;
         }
       }
 
+      .widget-view-model {
+        position: absolute;
+        top: -8px;
+        right: 3px;
+        font-size: 12px;
+        color: #67c23a;
+        z-index: 9;
+        font-weight: 500;
+      }
+
       &:after{
         position: absolute;
         left: 0;
