--- a/src/views/bms/Layout/style.less
+++ b/src/views/bms/Layout/style.less
@@ -1,29 +1,9 @@
-.box{
-  display: flex;
-  flex-direction:column;
-  height: 100%;
-}
-.top-nav{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  align-items: center;
-  flex-basis: 4%;
-  background-color: #438EB9;
-}
-.body{
-  display:flex;
-  flex-direction: row;
-  flex-basis: 96%;
-}
+/*
 .sidebar
 {
   flex:0 0 15%;
 }
-.sidebar>div:first-child{
-  border-right: 1px solid #DCDFE6;
-  height:100%
-}
+
 .el-menu{
   border-right:0px !important;
 }
@@ -54,4 +34,9 @@
 .nav-icon{
   font-size: 20px;
   color: #FFFFFF;
+}
+*/
+.sidebar>div:first-child{
+  border-right: 1px solid #DCDFE6;
+  height:100%
 }
